--- a/language/ca_ES/description.txt
+++ b/language/ca_ES/description.txt
@@ -1,1 +1,1 @@
-Presenta les imatges en una finestra din&agrave;mica que compr&egrave;n tota la pantalla sobre un fons transparent.
+Presenta les imatges en una finestra dinàmica que comprèn tota la pantalla sobre un fons transparent.
